Fix register form

--- a/ClientApp/app/components/register/register.component.html
+++ b/ClientApp/app/components/register/register.component.html
@@ -35,7 +35,7 @@
 
     <div class="form-group text-left">
         <label for="form4">Repeat password</label>
-        <input type="password" id="form4" class="form-control input-lg" [(ngModel)]="user.confitmPassword" name="confitmPassword">
+        <input type="password" id="form4" class="form-control input-lg" [(ngModel)]="user.confirmPassword" name="confirmPassword">
        
     </div>
 
