--- a/ClientApp/app/components/home/home.component.css
+++ b/ClientApp/app/components/home/home.component.css
@@ -12,6 +12,7 @@
 #wrapper.toggled {
     padding-left: 250px;
     overflow: scroll;
+
 }
  
 #sidebar-wrapper {
@@ -104,6 +105,7 @@
 @media(min-width:768px) {
     #wrapper {
         padding-left: 250px;
+        overflow: hidden;
     }
     .fixed-brand{
         width: 250px;
@@ -134,6 +136,7 @@
         -moz-transition: all 0.5s ease;
         -o-transition: all 0.5s ease;
         transition: all 0.5s ease;
+        overflow: hidden;
     }
  
     #wrapper.toggled #page-content-wrapper {
@@ -152,4 +155,11 @@
         width: auto;
  
     }
+   
+}
+
+.navbar-toggle {
+    color: #2196F3 !important;
+    border: 1px solid #2196F3;
+    /* background: red !important; */
 }
