--- a/ClientApp/app/components/ticket/ticket.component.html
+++ b/ClientApp/app/components/ticket/ticket.component.html
@@ -22,50 +22,20 @@
     </tbody>
 </table>
 
-<ng-template #template>
-    <div class="modal-header">
-      <h4 class="modal-title pull-left">Add Ticket</h4>
-      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-        <div class="form-group has-success">
-            <label class="control-label" for="inputSuccess1">Input with success</label>
-            <input type="text" class="form-control" id="inputSuccess1" aria-describedby="helpBlock2">
-            <span id="helpBlock2" class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
-          </div>
-          <div class="form-group has-warning">
-            <label class="control-label" for="inputWarning1">Input with warning</label>
-            <input type="text" class="form-control" id="inputWarning1">
-          </div>
-          <div class="form-group has-error">
-            <label class="control-label" for="inputError1">Input with error</label>
-            <input type="text" class="form-control" id="inputError1">
-          </div>
-          <div class="has-success">
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" id="checkboxSuccess" value="option1">
-                Checkbox with success
-              </label>
-            </div>
-          </div>
-          <div class="has-warning">
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" id="checkboxWarning" value="option1">
-                Checkbox with warning
-              </label>
-            </div>
-          </div>
-          <div class="has-error">
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" id="checkboxError" value="option1">
-                Checkbox with error
-              </label>
-            </div>
-          </div>
-    </div>
-</ng-template>
+<div class="modal fade" tabindex="-1" role="dialog" id="addForm">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Modal title</h4>
+        </div>
+        <div class="modal-body">
+          <p>One fine body&hellip;</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
