--- a/ClientApp/app/components/ticket/ticket.component.html
+++ b/ClientApp/app/components/ticket/ticket.component.html
@@ -2,7 +2,7 @@
 <hr>
 <div class="row">
     <div class="pull-right">
-        <button type="button" class="btn btn-primary" (click)="openModal(template)"><i class="fa fa-plus"></i>&nbsp; Add</button>
+        <button type="button" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp; Add</button>
     </div>
 </div>
 <table class="table table-hover">
