--- a/ClientApp/app/components/ticket/ticket.component.html
+++ b/ClientApp/app/components/ticket/ticket.component.html
@@ -2,7 +2,7 @@
 <hr>
 <div class="row">
     <div class="pull-right">
-        <button type="button" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp; Add</button>
+        <button type="button" class="btn btn-primary" (click)="openModal(template)"><i class="fa fa-plus"></i>&nbsp; Add</button>
     </div>
 </div>
 <table class="table table-hover">
@@ -22,20 +22,14 @@
     </tbody>
 </table>
 
-<div class="modal fade" tabindex="-1" role="dialog" id="addForm">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Modal title</h4>
-        </div>
-        <div class="modal-body">
-          <p>One fine body&hellip;</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
+<ng-template #template>
+    <div class="modal-header">
+      <h4 class="modal-title pull-left">Modal</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      This is a modal
+    </div>
+  </ng-template>
