--- a/ClientApp/app/components/ticket/ticket.component.html
+++ b/ClientApp/app/components/ticket/ticket.component.html
@@ -5,31 +5,72 @@
         <button type="button" class="btn btn-primary" (click)="openModal(template)"><i class="fa fa-plus"></i>&nbsp; Add</button>
     </div>
 </div>
+<br>
+<div class="alert alert-success" role="alert" *ngIf="SuccessMessage">
+    {{SuccessMessage}}
+</div>
 <table class="table table-hover">
     <thead>
         <th>Title</th>
         <th>Body</th>
+        <th>Status</th>
         <th>Author</th>
         <th>Assignee</th>
+        <th></th>
     </thead>
     <tbody>
         <tr *ngFor="let ticket of tickets">
             <td>{{ticket.title}}</td>
             <td>{{ticket.body}}</td>
+            <td>{{ticket.status?'Open':'Closed'}}</td>
             <td>{{ticket.author.name}}</td>
             <td>{{ticket.assignee.name}}</td>
+            <td width="80">
+                <button type="button" class="btn btn-circle btn-primary" (click)="Edit(ticket.id, template)">
+                    <i class="fa fa-edit"></i>
+                </button>
+                <button *ngIf="ticket.status"  type="button" class="btn btn-circle btn-danger" (click)="CloseTicket(ticket.id)">
+                    <i class="fa fa-close"></i>
+                </button>                   
+                <button *ngIf="!ticket.status" disabled  type="button" class="btn btn-circle btn-danger" (click)="CloseTicket(ticket.id)">
+                        <i class="fa fa-close"></i>
+                    </button>                   
+            </td>
         </tr>
     </tbody>
 </table>
 
 <ng-template #template>
     <div class="modal-header">
-      <h4 class="modal-title pull-left">Modal</h4>
-      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-        <span aria-hidden="true">&times;</span>
-      </button>
+        <h4 class="modal-title pull-left">Modal</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+        </button>
     </div>
     <div class="modal-body">
-      This is a modal
+        <div class="form-group">
+            <label>Title</label>
+            <input type="text" class="form-control" [(ngModel)]="ticket.title" name="title">
+        </div>
+        <div class="form-group">
+            <label>Body</label>
+            <input type="text" class="form-control" [(ngModel)]="ticket.body" name="body">
+        </div>
+        <div class="form-group">
+            <label>Author</label>
+            <select class="form-control" [(ngModel)]="ticket.authorID" name="authorid">
+                <option *ngFor="let user of users" value="{{user.id}}">{{user.name}}</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Assigned to</label>
+            
+            <select class="form-control" [(ngModel)]="ticket.assigneeID">
+                <option *ngFor="let user of users"   value="{{user.id}}">{{user.name}}</option>
+            </select>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="Save()">Save Ticket</button>
     </div>
   </ng-template>
